<resources>
    <string name="app_name">TMDB</string>
    <string name="retry">Retry</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>
    <string name="title_label">Title</string>
    <string name="genres_label">Genres</string>
    <string name="release_label">Release Date</string>
    <string name="rating_label">Rating</string>
    <string name="duration_label">Duration</string>
    <string name="overview_label">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_label">Trailer</string>
    <string name="add_favorite">Added to Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="no_data">Empty data</string>
    <string name="cast_label">Cast</string>
    <string name="production_companies_label">Production Companies</string>
    <string name="production_countries_label">Production Countries</string>
    <string name="languages_label">Languages</string>
</resources>