<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/now_playing"
        android:icon="@drawable/baseline_airplay_24"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/popular"
        android:icon="@drawable/baseline_trending_up_24"
        android:title="@string/popular" />
    <item
        android:id="@+id/top_rated"
        android:icon="@drawable/baseline_local_play_24"
        android:title="@string/top_rated" />
    <item
        android:id="@+id/upcoming"
        android:icon="@drawable/baseline_upcoming_24"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/favorite" />
</menu>