<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.moviedetail.MovieDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_detail"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:title="@string/app_name"
        app:titleTextColor="@color/black"
        app:titleCentered="true" />

    <ScrollView
        android:id="@+id/container_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_detail" />

            <TextView
                android:id="@+id/tv_genres_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/genres_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <View
                android:id="@+id/line_genres"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_genres_label" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_genres" />

            <TextView
                android:id="@+id/tv_languages_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/languages_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_genres" />

            <View
                android:id="@+id/line_languages"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_languages_label" />

            <TextView
                android:id="@+id/tv_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_languages" />

            <TextView
                android:id="@+id/tv_release_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/release_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_languages" />

            <View
                android:id="@+id/line_release"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_release_label" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_release" />

            <TextView
                android:id="@+id/tv_production_companies_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/production_companies_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release" />

            <View
                android:id="@+id/line_production_companies"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_production_companies_label" />

            <TextView
                android:id="@+id/tv_production_companies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_production_companies" />

            <TextView
                android:id="@+id/tv_production_countries_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/production_countries_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_production_companies" />

            <View
                android:id="@+id/line_production_countries"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_production_countries_label" />

            <TextView
                android:id="@+id/tv_production_countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_production_countries" />

            <TextView
                android:id="@+id/tv_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/rating_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_production_countries" />

            <View
                android:id="@+id/line_rating"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_label" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_rating" />

            <TextView
                android:id="@+id/tv_duration_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/duration_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rating" />

            <View
                android:id="@+id/line_duration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_duration_label" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_duration" />

            <TextView
                android:id="@+id/tv_overview_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/overview_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_duration" />

            <View
                android:id="@+id/line_overview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@color/shimmerLight"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_label" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_overview" />

            <TextView
                android:id="@+id/tv_cast_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/cast_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_cast_label" />

            <TextView
                android:id="@+id/tv_trailer_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="center"
                android:text="@string/trailer_label"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_cast" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_trailer_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_100dp"
                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shimmer_auto_start="true">

        <include layout="@layout/activity_movie_detail_placeholder" />
    </com.facebook.shimmer.ShimmerFrameLayout>


    <include
        android:id="@+id/container_error"
        layout="@layout/view_error"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>